# newsapi-website

./: .gitignore  CHANGELOG.md  LICENCE.md  README.md  main.py  requirements.txt  setup.cfg  setup.py
config/: config.py
gcp/: gcp_handler.py
mysite/mysite/: settings.py  urls.py  wsgi.py
mysite/newsapp/: models.py  urls.py  views.py
mysite/newsapp/management/commands/: import_articles.py  run_daily.py
mysite/newsapp/migrations/: 0001_initial.py  0002_remove_article_uri_article_image_and_more.py  0003_alter_article_image.py
mysite/newsapp/templates/newsapp/: advert.html  detail.html  index.html  index_old.html
mysite/newsapp/templatetags/: newsapp_extras.py
news_handler/: news_handler.py
newsapp/: admin.py  models.py  tests.py  urls.py  views.py
newsapp/management/commands/: populate_db.py  run_daily.py
newsapp/migrations/: 0001_initial.py  0002_alter_author_name_surname.py  0002_alter_topic_name.py  0003_author_image_alter_article_topic.py  0004_alter_author_name_surname.py
newsapp/static/newsapp/css/: bootstrap.css  responsive.css  style.css  style.scss
newsapp/templates/newsapp/: author.html  base.html  detail.html  index.html  topic.html
parsers/: article_parser.py
src/ai/: ai_writer.py
src/ai_writer/: ai_writer.py
src/config/: config.py
src/gcp/: bq_handler.py  gcs_handler.py
src/gcp_handler/: bq_handler.py  gcp_handler.py
src/news/: news_handler.py
src/news_handler/: news_handler.py
src/parsers/: article_parser.py
src/utilities/: const.py  utils.py  validators.py
src/utils/: utils.py  validators.py
tests/: test_ai_writer.py  test_article_parser.py  test_validators.py
tests/functional_tests/: news_handler_ai_writer.py
utilities/: validators.py
writer/: ai_writer.py
(+1 files in other folders)
