[metadata]
name = newsapi_website
version = attr: newsapi_website.1
author = Rafał Mokrzycki
author_email = rafalmokrzycki1@gmail.com
description = Automatic news poster.
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = news, gcp, django, api
license = none
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = newsapi_website.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    newsapi_website.tests*
