[metadata]
name = newsapi_website
version = attr: newsapi_website.1
author = Rafał Mokrzycki
author_email = rafalmokrzycki1@gmail.com
description = Automatic news poster.
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = news, gcp, django, api
license = none
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
